[about page] use handle for og sponsors

--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -200,8 +200,8 @@
       <h3 i18n="about.sponsors.withHeart">OG Sponsors ❤️</h3>
       <div class="wrapper">
         <ng-container *ngIf="ogs$ | async as ogs; else loadingSponsors">
-          <a *ngFor="let ogSponsor of ogs" [href]="'https://twitter.com/' + ogSponsor" target="_blank" rel="sponsored" [title]="ogSponsor">
-            <img class="image" [src]="'/api/v1/about-page/og/images/' + ogSponsor" onError="this.src = '/resources/profile/unknown.svg'; this.className = 'image unknown'"/>
+          <a *ngFor="let ogSponsor of ogs" [href]="'https://twitter.com/' + ogSponsor.handle" target="_blank" rel="sponsored" [title]="ogSponsor.handle">
+            <img class="image" [src]="'/api/v1/about-page/og/images/' + ogSponsor.handle" onError="this.src = '/resources/profile/unknown.svg'; this.className = 'image unknown'"/>
           </a>
         </ng-container>
       </div>
